# quant

./: .env.example  .gitignore  .hintrc  .pre-commit-config.yaml  .prettierignore  .prettierrc  AGENTS.md  PROJECT.md  README.md  UV_GUIDE.md  biome.json  docker-compose.override.yml  docker-compose.yml  mcp_config.json  package.json  pnpm-lock.yaml  pyproject.toml  pyrightconfig.json  quant.code-workspace  run_server.py  test-mermaid.md  test_backtest_duckdb.py  test_duckdb.py  test_sma_config.json
backend/: .dockerignore  .env.example  AGENTS.md  Dockerfile  Dockerfile copy  ERD.md  README.md  __init__.py  init-mongo.js  pyproject.toml  test_phase1.py
backend/app/: main.py
backend/app/alpha_vantage/: __init__.py  base.py  client.py  stock.py  technical_indicators.py
backend/app/api/: __init__.py  deps.py
backend/app/api/routes/: __init__.py  auth.py  backtests.py  chatops.py  chatops_advanced.py  companies.py  dashboard.py  feature_store.py  health.py  integrated.py  market_data.py  narrative.py  oauth.py  oauth2.py  optimize_backtests.py  pipeline.py  prompt_governance.py  signals.py  status.py  strategies.py  strategy_builder.py  tasks.py  templates.py  users.py  watchlists.py
backend/app/core/: config.py  init_data.py  init_test_user.py
backend/app/models/: __init__.py  abtest.py  backtest.py  base_model.py  benchmark.py  company.py  data_quality.py  evaluation.py  fairness.py  feature_store.py  market_data.py  model_lifecycle.py  performance.py  prompt_governance.py  strategy.py  user.py  watchlist.py
backend/app/models/chatops/: __init__.py  session.py
backend/app/models/gen_ai/: __init__.py  prompt_governance.py
backend/app/models/market_data/: __init__.py  base.py  crypto.py  economic_indicator.py  fundamental.py  intelligence.py  regime.py  stock.py  technical_indicator.py
backend/app/models/ml_platform/: __init__.py  abtest.py  benchmark.py  data_quality.py  evaluation.py  fairness.py  feature_store.py  model_lifecycle.py
backend/app/models/trading/: __init__.py  backtest.py  optimization.py  performance.py  strategy.py
backend/app/models/user/: __init__.py  watchlist.py
backend/app/schemas/: __init__.py  backtest.py  base_schema.py  chatops.py  company.py  dashboard.py  evaluation_harness.py  feature_store.py  market_data.py  model_lifecycle.py  narrative.py  predictive.py  prompt_governance.py  strategy.py  strategy_builder.py  user.py  watchlist.py
backend/app/schemas/enums/: __init__.py  gen_ai.py  market_data.py  ml_platform.py  system.py  trading.py  user.py
backend/app/schemas/gen_ai/: __init__.py  chatops.py  models.py  narrative.py  prompt_governance.py  rag.py  strategy_builder.py
backend/app/schemas/market_data/: __init__.py  base.py  crypto.py  economic_indicator.py  fundamental.py  intelligence.py  stock.py  technical_indicator.py
backend/app/schemas/ml_platform/: __init__.py  evaluation_harness.py  feature_store.py  model_lifecycle.py
backend/app/schemas/trading/: __init__.py  backtest.py  optimization.py  strategy.py
backend/app/schemas/user/: __init__.py  dashboard.py  watchlist.py
backend/app/seed_templates/: balanced_momentum.json  conservative_sma_crossover.json  standard_buy_and_hold.json  standard_rsi_mean_reversion.json
backend/app/services/: __init__.py  auth_service.py  backtest_service.py  chatops_advanced_service.py  dashboard_service.py  data_pipeline.py  database_manager.py  evaluation_harness_service.py  feature_store_service.py  integrated_backtest_executor.py  market_data_service.py  ml_signal_service.py  model_lifecycle_service.py  narrative_report_service.py  oauth2_client.py  optimization_service.py  portfolio_service.py  probabilistic_kpi_service.py  regime_detection_service.py  service_factory.py  strategy_builder_service.py  strategy_service.py  user_manager.py  watchlist_service.py
backend/app/services/backtest/: __init__.py  data_processor.py  executor.py  monitoring.py  orchestrator.py  performance.py  trade_engine.py
backend/app/services/gen_ai/: __init__.py  narrative_report_service.py  strategy_builder_service.py
backend/app/services/llm/: __init__.py  chatops_agent.py  prompt_governance_service.py
backend/app/services/market_data/: __init__.py  crypto.py  economic_indicator.py  fundamental.py  intelligence.py  stock.py
backend/app/services/market_data_service/: __init__.py  base_service.py  crypto.py  economic_indicator.py  fundamental.py  intelligence.py  stock.py  stock_service.py  technical_indicator.py
backend/app/services/ml/: __init__.py  anomaly_detector.py  trainer.py
backend/app/services/ml_platform/: __init__.py  probabilistic_kpi_service.py
backend/app/services/monitoring/: __init__.py  data_quality_sentinel.py
backend/app/strategies/: __init__.py  base_strategy.py  configs.py  momentum.py  rsi_mean_reversion.py  sma_crossover.py
backend/app/tasks/: __init__.py  stock_update.py
backend/app/utils/: __init__.py  migrate_strategies.py  template_seeder.py
backend/projects/market_data_service/: PROJECT1-2025-10-07.md
backend/tests/: README.md  __init__.py  conftest.py  test_anomaly_detector.py  test_api_routes.py  test_data_processor.py  test_feature_engineer.py  test_market_data_service.py  test_ml_integration.py  test_ml_trainer.py  test_model_registry.py  test_service_factory.py
backend/tests/api/: test_market_data_routes.py  test_strategy_builder_api.py  test_watchlists_routes.py
backend/tests/backtest/: test_backtest_e2e.py  test_orchestrator_integration.py
backend/tests/market_data/: test_market_data_service.py
backend/tests/utils/: __init__.py  backtest_fixtures.py
microservices/backtest-service/: README.md  pyproject.toml
microservices/backtest-service/app/: __init__.py  main.py
microservices/data-service/: Dockerfile  README.md  pyproject.toml
microservices/data-service/app/: main.py
microservices/data-service/tests/: test_api_routes.py
microservices/gateway-service/: pyproject.toml
microservices/strategy-service/: Dockerfile  README.md  main.py  pyproject.toml
microservices/strategy-service/app/: __init__.py  main.py
(+687 files in other folders)
