[project]
name = "backend"
version = "0.1.0"
description = "Quant Service API"
authors = [{ name = "Dan Kim", email = "daniel@mysingle.io" }]
requires-python = ">=3.12"
license = { text = "MIT" }

# Service-specific dependencies - mysingle-quant provides common utilities
dependencies = [
    "mysingle-quant>=0.1.7",
    "aiohttp>=3.9.4",
    "pydantic>=2.10.7",
    "pytest-mock>=3.14.0",
    "pydantic-extra-types>=2.2.0",
    "httpx>=0.25.0",
    "mypy>=1.17.0",
    "ruff>=0.7.1",
    "pytest-cov>=4.1.0",
    "pandas",
    "vectorbt>=0.25.2",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "ta-lib>=0.4.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=0.24.0",

]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
