[project]
name = "backtest-service"
version = "1.0.0"
description = "Quant Backtest Execution Microservice"
authors = [{ name = "Quant Team", email = "team@quant.com" }]
requires-python = ">=3.12"

# Backtest service specific dependencies
dependencies = ["mysingle-quant>=0.1.7", "vectorbt>=0.25.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
