[project]
name = "backtest-service"
version = "1.0.0"
description = "Quant Backtest Execution Microservice"
authors = [{ name = "Quant Team", email = "team@quant.com" }]
requires-python = ">=3.12"

# Backtest service specific dependencies
dependencies = [
    "mysingle-quant>=0.1.7",
    "vectorbt>=0.25.2",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.25.0",
    "mypy>=1.17.0",
    "ruff>=0.7.1",
    "pytest-cov>=4.1.0",
    "pandas-stubs>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
