[project]
name = "gateway-service"
version = "1.0.0"
description = "API Gateway for Quant Microservices"
authors = [{ name = "Quant Team", email = "team@quant.com" }]
requires-python = ">=3.12"

# Gateway service specific dependencies
dependencies = ["mysingle-quant>=0.1.7"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
