[project]
name = "strategy-service"
version = "1.0.0"
description = "Quant Strategy Management Microservice"
authors = [{ name = "Quant Team", email = "team@quant.com" }]
requires-python = ">=3.12"

# Strategy service specific dependencies
dependencies = [
  "mysingle-quant>=0.1.7",
  "pydantic-extra-types>=2.2.0",
  "pandas>=2.0.0",
  "numpy>=1.24.0",
  "ta-lib>=0.4.0",
  "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.1",
  "pytest-asyncio>=0.24.0",
  "pytest-mock>=3.14.0",
  "httpx>=0.25.0",
  "mypy>=1.17.0",
  "ruff>=0.7.1",
  "pytest-cov>=4.1.0",
  "pandas-stubs>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]
ignore = []

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
